--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: crdt_sync
 description: A dart-native turnkey solution for painless network synchronization
-version: 1.0.10
-repository: https://github.com/cachapa/crdt_sync
+version: 1.0.11
+repository: https://github.com/VantageSoftwareSolutions/crdt_sync
 
 environment:
   sdk: ^3.0.0
